General cleanup to eliminate compiler errors and warnings: Added generics to eliminate warnings, which allowed the removal of casting.